--- a/garden.html
+++ b/garden.html
@@ -16,14 +16,13 @@
     <div class="content">
         <div id="block_menu" class="block_menu">
             <section class="submenu">
-                <h3 class="select">About Waterbear</h3>
+                <h3 class="select">About</h3>
                 <div class="option" style="display:none;">
-                    <img src="images/waterbear.png" alt="waterbear icon"/>
-                    <p>Demo: <a href="http://waterbearlang.com/">waterbearlang.com</a></p>
-                    <p>Source and info: <a href="http://github.com/waterbearlang/waterbear">github.com/waterbearlang/waterbear</a></p>
-                    <p>Follow on twitter: <a href="http://twitter.com/waterbearlang">@waterbearlang</a></p>
-                    <p>Discuss Waterbear on the <a href="http://lists.waterbearlang.com/listinfo.cgi/discuss-waterbearlang.com">mailing list</a></p>
-                    <p>Waterbear image via: <a href="http://commons.wikimedia.org/wiki/File:Waterbear.jpg">commons.wikimedia.org</a>
+                    <p> <a href="index.html">Info</a></p>
+                    <p> <a href="docs/index.html">Documentation</a></p>
+                    <!-- Not sure if this is necessary, better safe than sorry -->
+                    <p> <a href="license.html">License</a></p>
+                    <p> <a href="index.html#help">Help</a></p>
                 </div>
             </section>
         </div>
