--- a/garden.html
+++ b/garden.html
@@ -80,7 +80,7 @@
     </div>
     <div class="hidden dialog" id="exp">
       <h2>Exported Code</h2>
-      <small>Copy this into a text document to save for your records. More info in the <em>Need Help?</em> tab</small>
+      <small>Copy this into a text document to save for your records.</small>
       <br/><br/>
       <textarea></textarea>
       <button class="done">Done</button>    
@@ -118,6 +118,15 @@
                 }
             }
         });
+        // This needs to run after the plugin is loaded.
+        function pluginReady(){
+            load_current_scripts();
+            if(q.demo){
+                $(document).ready(function(){
+                    restore_demo_by_name(q.demo);
+                });
+            }
+        }
     </script>
   </body>
 </html>
