Added examples page to documentation.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         </div>
         <div class="span4" id=credits>
             <h2> Credits </h2>
-            <p> This environment was based on <a href="waterbearlang.com">Waterbear</a>. 
+            <p> This environment was based on <a href="waterbearlang.com">Waterbear</a>. </p>
+            <p> The images used as examples were taken from wikimedia commons,
+            and are in the public domain.</p>
+
             <!-- TODO: License here? -->
         </div>
         <div class="span4" id=source>
