--- a/garden.html
+++ b/garden.html
@@ -98,26 +98,11 @@
     <script src="scripts/workspace.js"></script>
     <script>
         var q = $.parseQuery();
-        if(!q.plugin || q.plugin == "undefined" || q.plugin == null) 
-            window.location = "./";//If they don't have the plugin part of the query string lets send them back home.
-        var testRes = ({
-            "javascript" : "plugins/javascript.js",
-            "arduino" : "plugins/arduino.js",
-            "canvas" : "plugins/canvas.js",
-            "crafty" : "plugins/crafty.js",
-            "gamequery" : "plugins/gamequery.js"
-        })[ q.plugin ];
-        
+        // Insert path of plugin to be loaded here
         yepnope({
-            test : testRes,
-            yep : testRes,
-            complete : function () {
-                if(! testRes ){
-                    window.location = "./";
-                    alert('Sorry the plugin: \"'+q.plugin+'\" does not exist. \n\n We\'ll rediect you back to the main page to choose one that is available.');
-                }
-            }
+            load: ["plugins/canvas.js"]
         });
+
         // This needs to run after the plugin is loaded.
         function pluginReady(){
             load_current_scripts();
