Improved project engage documentation.

--- a/garden.html
+++ b/garden.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Waterbear: Code Garden</title>
+    <title>Project Engage Programming</title>
     <link href="stylesheets/workspace.css" rel="stylesheet" />
     <link href="stylesheets/blocks.css" rel="stylesheet" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
