--- a/index.html
+++ b/index.html
@@ -43,7 +43,30 @@
         </div>
         <div class="span4" id=credits>
             <h2> Credits </h2>
-            <p> This environment was based on <a href="waterbearlang.com">Waterbear</a>. </p>
+            <p> This environment was based on <a href="http://waterbearlang.com">Waterbear</a>. </p>
+            <blockquote>
+              <p>
+                Waterbear is a toolkit for making programming more
+                accessible and fun. Not a language itself, but a block
+                syntax inspired by <a
+                href="http://scratch.mit.edu">Scratch</a>  that
+                can be used to represent languages. Waterbear's blocks
+                drag and snap together, representing code that eliminates
+                syntax errors much like garbage collection alleviates
+                memory errors and bound checking helps prevent overrun
+                errors.
+              </p>
+              <p>
+                Waterbear's system of draggable, snappable blocks, are
+                built using clean HTML5, CSS3, and Javascript. The goal
+                is not to slavishly duplicate Scratch, or to create a
+                programming language, but to create a visual syntax tool
+                that can be used with a variety of languages and
+                projects.
+              </p>
+              <small><a href="http://waterbearlang.com"> Waterbear's
+              website</a> </small>
+            </blockquote>
             <p> The images used as examples were taken from wikimedia commons,
             and are in the public domain.</p>
 
