Added contributors to index.html, added license.html

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
             </blockquote>
             <p> The images used as examples were taken from wikimedia commons,
             and are in the public domain.</p>
+            <h2> Contributors </h2>
+            <ul>
+                <li><a href=https://github.com/dethe>Dethe Elza</a></li>
+                <li><a href="https://github.com/stretchyboy">Martyn Eggleton</a></li>
+                <li><a href="https://github.com/TechplexEngineer">Blake Bourque</a></li>
+                <li><a href="http://github.com/christopherdebeer">Chistopher de Beer</a></li>
+                <li><a href="http://github.com/toolness/">Atul Varma</a></li>
+                <li><a href="http://github.com/adamfaulkner"</a>Adam Faulkner</a></li>
+            </ul>
+
 
             <!-- TODO: License here? -->
         </div>
