--- a/garden.html
+++ b/garden.html
@@ -21,7 +21,7 @@
                     <p> <a href="index.html">Info</a></p>
                     <p> <a href="docs/index.html">Documentation</a></p>
                     <!-- Not sure if this is necessary, better safe than sorry -->
-                    <p> <a href="license.html">License</a></p>
+                    <p> <a href="license">License</a></p>
                     <p> <a href="index.html#help">Help</a></p>
                 </div>
             </section>
