--- a/garden.html
+++ b/garden.html
@@ -98,7 +98,6 @@
     <script src="lib/jquery.bpopup-0.5.1.min.js"></script>
     <script src="lib/jquery.autoGrowInput.js"></script>
     <script src="lib/json2.js"></script><!-- Make this conditional -->
-    <script src="lib/beautify.js"></script>
     <script src="scripts/drag.js"></script>
     <script src="scripts/blocks.js"></script>
     <script src="scripts/runtime.js"></script> <!-- Should this be moved to language? -->
@@ -121,7 +120,7 @@
             }
 			$(function(){
 				$("#accordion").accordion({collapsible: true, autoHeight: false});
-				//$( "#scriptview" ).buttonset();
+				$( "#radio" ).buttonset();
 				$("button").button();
 			});
         }
