--- a/index.html
+++ b/index.html
@@ -69,22 +69,27 @@
             </blockquote>
             <p> The images used as examples were taken from wikimedia commons,
             and are in the public domain.</p>
-            <h2> Contributors </h2>
-            <ul>
-                <li><a href=https://github.com/dethe>Dethe Elza</a></li>
-                <li><a href="https://github.com/stretchyboy">Martyn Eggleton</a></li>
-                <li><a href="https://github.com/TechplexEngineer">Blake Bourque</a></li>
-                <li><a href="http://github.com/christopherdebeer">Chistopher de Beer</a></li>
-                <li><a href="http://github.com/toolness/">Atul Varma</a></li>
-                <li><a href="http://github.com/adamfaulkner"</a>Adam Faulkner</a></li>
-            </ul>
 
 
             <!-- TODO: License here? -->
         </div>
         <div class="span4" id=source>
             <h2> Get Source Code </h2>
-            <p> <a href="https://github.com/adamfaulkner/projectengageprogramming/"> View this project on GitHub </a> </p>
+            <p> <a href="https://github.com/arknave/LASAProjectEngage/"> View this project on GitHub </a> </p>
+			<br></br>
+            <h2> Contributors </h2>
+            <ul>
+                <li><a href="https://github.com/dethe">Dethe Elza</a></li>
+                <li><a href="https://github.com/stretchyboy">Martyn Eggleton</a></li>
+                <li><a href="https://github.com/TechplexEngineer">Blake Bourque</a></li>
+                <li><a href="http://github.com/christopherdebeer">Chistopher de Beer</a></li>
+                <li><a href="http://github.com/toolness/">Atul Varma</a></li>
+                <li><a href="http://github.com/adamfaulkner"</a>Adam Faulkner</a></li>
+                <li><a href="http://github.com/arknave"</a>Arnav Sastry</a></li>
+                <li><a href="http://github.com/kasontey"</a>Kason Tey</a></li>
+                <li><a href="http://github.com/kdeholton"</a>Kyle Deholton</a></li>
+                <li><a href="http://github.com/JonasWecshler"</a>Jonas Wecshler</a></li>
+            </ul>
         </div>
       </div>
   </body>
