moved some functions from workspace.js to garden.html

--- a/garden.html
+++ b/garden.html
@@ -146,6 +146,22 @@
 				$( "#radio" ).buttonset();
 				$("button").button();
 				
+				function scripts_as_object(){
+					var blocks = $('.workspace:visible .scripts_workspace > .wrapper');
+					if (blocks.length){
+						return blocks.map(function(){return $(this).block_description();}).get();
+					}else{
+						return [];
+					}   
+				}
+
+				function save_current_scripts(){
+					show_workspace();
+					$('#accordion')[0].scrollIntoView();
+					localStorage['__current_scripts'] = JSON.stringify(scripts_as_object());
+				}
+				$(window).unload(save_current_scripts);
+
 				$("#save_dialog").dialog({
 					autoOpen: false,
 					height: 300,
