--- a/garden.html
+++ b/garden.html
@@ -11,6 +11,12 @@
   </head>
   <body>
     <div class="content">
+		<div id="bearPic">
+			<img src="images/waterbear_steampunk.png" alt="bear" width=30px height=39px />
+		</div>
+		<div id="logo">
+			<h4>Waterbear</h4>
+		</div>
         <div id="accordion" class="block_menu ui-accordion">
             <h3 class="select"><a href="#">About</a></h3>
             <div class="option">
@@ -21,7 +27,7 @@
                 <p> <a href="index.html#help">Help</a></p>
             </div>
         </div>
-        <div class="tab_bar">
+        <div class="tab_bar"><nobr>
 			<span id="radio">
 						<input type="radio" id="sblock" name="scriptview" checked="yes" /><label for="sblock">Script Blocks</label>
 						<input type="radio" id="stext" name="scriptview"/><label for="stext">Script Text</label>
@@ -32,7 +38,7 @@
             <button class="demo_scripts">Demos</button>
             <button class="save_scripts">Save</button>
             <button class="restore_scripts">Restore</button>
-            <button class="layout_blocks">Layout</button>
+            <button class="layout_blocks">Layout</button></nobr>
         </div>
         <div class="tab_bar2">
             <button class="goto_script">Back to Script</button>
