Deleted the layout button
i beat you arnav, but seriously it is unnecessary

--- a/garden.html
+++ b/garden.html
@@ -27,7 +27,7 @@
                 <p> <a href="index.html#help">Help</a></p>
             </div>
         </div>
-        <div class="tab_bar"><nobr>
+        <div class="tab_bar">
 			<span id="radio">
 						<input type="radio" id="sblock" name="scriptview" checked="yes" /><label for="sblock">Script Blocks</label>
 						<input type="radio" id="stext" name="scriptview"/><label for="stext">Script Text</label>
@@ -38,7 +38,7 @@
             <button class="demo_scripts">Demos</button>
             <button class="save_scripts">Save</button>
             <button class="restore_scripts">Restore</button>
-            <button class="layout_blocks">Layout</button></nobr>
+            
             <button id="search_enter" type="button" onClick="search($('#search').val())">
 					Enter
 				</button>
