--- a/garden.html
+++ b/garden.html
@@ -132,7 +132,6 @@
 				Done
 			</button>
 		</div>
-
 		<script src="lib/jquery-1.7.2.min.js"></script>
 		<!--<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>-->
 		<script src="lib/jquery.ui.core.js"></script>
@@ -145,6 +144,7 @@
 		<script src="lib/jquery.bpopup-0.5.1.min.js"></script>
 		<script src="lib/jquery.autoGrowInput.js"></script>
 		<script src="lib/json2.js"></script><!-- Make this conditional -->
+		<script src="lib/jquery.scrollTo.js"></script>
 		<script src="scripts/drag.js"></script>
 		<script src="scripts/blocks.js"></script>
 		<script src="scripts/runtime.js"></script>
