--- a/garden.html
+++ b/garden.html
@@ -1,167 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Project Engage Programming</title>
-	
-	<link href="stylesheets/workspace.css" rel="stylesheet" />
-	<link href="stylesheets/blocks.css" rel="stylesheet" />
-	<link type="text/css" href="stylesheets/custom-theme/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
-    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
-  </head>
-  <body>
-    <div class="content">
-		<div id="bearPic">
-			<img src="images/waterbear_steampunk_trans.png" alt="bear" width=30px height=39px />
-		</div>
-		<div id="logo">
-			<h4>Waterbear</h4>
-		</div>
-        <div id="accordion" class="block_menu ui-accordion">
-            <h3 class="select"><a href="#">About</a></h3>
-            <div class="option">
-                <p> <a href="index.html">Info</a></p>
-                <p> <a href="docs/index.html">Documentation</a></p>
-                <!-- Not sure if this is necessary, better safe than sorry -->
-                <p> <a href="license">License</a></p>
-                <p> <a href="index.html#help">Help</a></p>
-            </div>
-        </div>
-        <div class="tab_bar">
-			<span id="radio">
-						<input type="radio" id="sblock" name="scriptview" checked="yes" /><label for="sblock">Script Blocks</label>
-						<input type="radio" id="stext" name="scriptview"/><label for="stext">Script Text</label>
-			</span>
-            <button class="run_scripts">Run</button>
-            <button class="goto_stage">Show Stage</button>
-            <button class="clear_scripts">Clear Scripts</button>
-            <button class="demo_scripts">Demos</button>
-            <button class="save_scripts">Save</button>
-            <button class="restore_scripts">Restore</button>
-            
-            <button id="search_enter" type="button" onClick="search($('#search').val())">
+	<head>
+		<meta charset="utf-8" />
+		<title>Project Engage Programming</title>
+
+		<link href="stylesheets/workspace.css" rel="stylesheet" />
+		<link href="stylesheets/blocks.css" rel="stylesheet" />
+		<link type="text/css" href="stylesheets/custom-theme/jquery-ui-1.8.21.custom.css" rel="stylesheet" />
+		<meta name="viewport" content="height=device-height, initial-scale=1.0" />
+	</head>
+	<body>
+		<div class="content">
+			<div id="bearPic">
+				<img src="images/waterbear_steampunk_trans.png" alt="bear" width=30px height=39px />
+			</div>
+			<div id="logo">
+				<h4>Waterbear</h4>
+			</div>
+			<div id="accordion" class="block_menu ui-accordion">
+				<h3 class="select"><a href="#">About</a></h3>
+				<div class="option">
+					<p>
+						<a href="index.html">Info</a>
+					</p>
+					<p>
+						<a href="docs/index.html">Documentation</a>
+					</p>
+					<!-- Not sure if this is necessary, better safe than sorry -->
+					<p>
+						<a href="license">License</a>
+					</p>
+					<p>
+						<a href="index.html#help">Help</a>
+					</p>
+				</div>
+			</div>
+			<div class="tab_bar">
+				<span id="radio">
+					<input type="radio" id="sblock" name="scriptview" checked="yes" />
+					<label for="sblock">Script Blocks</label>
+					<input type="radio" id="stext" name="scriptview"/>
+					<label for="stext">Script Text</label> </span>
+				<button class="run_scripts">
+					Run
+				</button>
+				<button class="goto_stage">
+					Show Stage
+				</button>
+				<button class="clear_scripts">
+					Clear Scripts
+				</button>
+				<button class="demo_scripts">
+					Demos
+				</button>
+				<button class="save_scripts">
+					Save
+				</button>
+				<button class="restore_scripts">
+					Restore
+				</button>
+
+				<button id="search_enter" type="button" onClick="search($('#search').val())">
 					Enter
 				</button>
 
 				<input id="search" class = 'search-field'/>
-        </div>
-        <div class="tab_bar2">
-            <button class="goto_script">Back to Script</button>
-            <button class="clear_canvas">Clear Stage</button>
-            <button class="run_scripts">Run</button>
-        </div>
-        <div class="workspace">
-            <div class="scripts_workspace"></div>
-            <div class="scripts_text_view"></div>
-        </div>
-        <div class="stage">
+			</div>
+			<div class="tab_bar2">
+				<button class="goto_script">
+					Back to Script
+				</button>
+				<button class="clear_canvas">
+					Clear Stage
+				</button>
+				<button class="run_scripts">
+					Run
+				</button>
+			</div>
+			<div class="workspace">
+				<div class="scripts_workspace"></div>
+				<div class="scripts_text_view"></div>
+			</div>
+			<div class="stage"></div>
 		</div>
-    </div>
-    <div class="hidden" id="color_popup">
-        <div id="color_contents">
+		<div class="hidden" id="color_popup">
+			<div id="color_contents"></div>
 		</div>
-    </div>
-    <div class="hidden dialog" id="save_dialog">
-        <div id="save_dialog_contents">
-            <h2>Save the current script</h2>
-            <input id="script_name" placeholder="Script Name" />
-            <textarea id="script_description" placeholder="Optional Description"></textarea>
-            <button class="save">Save</button>
-        <button class="export">Export</button>
-            <button class="cancel">Cancel</button>
-        </div>
-    </div>
-    <div class="hidden dialog" id="restore_dialog">
-        <div id="restore_dialog_contents">
-            <h2>Restore a script</h2>
-            <ul class="scrollList" id="script_list">
-            </ul>
-            <button class="cancel">Cancel</button>
-        <button class="exp">From Export</button>
-        </div>
-    </div>
-    <div class="hidden dialog" id="demos_dialog">
-        <div id="demos_dialog_contents">
-            <h2>Load a demo</h2>
-            <ul class="scrollList" id="demo_list">
-            </ul>
-            <button class="cancel">Cancel</button>
-        </div>
-    </div>
-    <div class="hidden dialog" id="exp">
-      <h2>Exported Code</h2>
-      <small>Copy this into a text document to save for your records.</small>
-      <br/><br/>
-      <textarea></textarea>
-      <button class="done">Done</button>    
-      </div>
-	
-	<script src="lib/jquery-1.7.2.min.js"></script>
-	<!--<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>-->
-    <script src="lib/jquery.ui.core.js"></script>
-	<script src="lib/jquery.ui.widget.js"></script>
-	<script src="lib/jquery.ui.position.js"></script>
-	<script src="lib/jquery.ui.autocomplete.js"></script>
-	<script src="lib/jquery.hotkeys.js"></script>
-    <script src="lib/jquery.querystring.js"></script>
-    <script src="lib/yepnope.1.0.2-min.js"></script>
-    <script src="lib/jquery.bpopup-0.5.1.min.js"></script>
-    <script src="lib/jquery.autoGrowInput.js"></script>
-    <script src="lib/json2.js"></script><!-- Make this conditional -->
-    <script src="scripts/drag.js"></script>
-    <script src="scripts/blocks.js"></script>
-    <script src="scripts/runtime.js"></script> <!-- Should this be moved to language? -->
-    <script src="scripts/workspace.js"></script>
-    <script src="scripts/search.js"></script>
-	<script type="text/javascript" src="lib/jquery-ui-1.8.21.custom.min.js"></script>  
-<script>
-			/*Runs the categories in the search field.*/
-			$.widget("custom.catcomplete", $.ui.autocomplete, {
-				_renderMenu : function(ul, items) {
-					var self = this, currentCategory = "";
-					$.each(items, function(index, item) {
-						if (item.category != currentCategory) {
-							ul.append("<li class='ui-autocomplete-category'>" + item.category + "</li>");
-							currentCategory = item.category;
-						}
-						self._renderItem(ul, item);
-					});
-				}
-			});
+		<div class="hidden dialog" id="save_dialog">
+			<div id="save_dialog_contents">
+				<h2>Save the current script</h2>
+				<input id="script_name" placeholder="Script Name" />
+				<textarea id="script_description" placeholder="Optional Description"></textarea>
+				<button class="save">
+					Save
+				</button>
+				<button class="export">
+					Export
+				</button>
+				<button class="cancel">
+					Cancel
+				</button>
+			</div>
+		</div>
+		<div class="hidden dialog" id="restore_dialog">
+			<div id="restore_dialog_contents">
+				<h2>Restore a script</h2>
+				<ul class="scrollList" id="script_list"></ul>
+				<button class="cancel">
+					Cancel
+				</button>
+				<button class="exp">
+					From Export
+				</button>
+			</div>
+		</div>
+		<div class="hidden dialog" id="demos_dialog">
+			<div id="demos_dialog_contents">
+				<h2>Load a demo</h2>
+				<ul class="scrollList" id="demo_list"></ul>
+				<button class="cancel">
+					Cancel
+				</button>
+			</div>
+		</div>
+		<div class="hidden dialog" id="exp">
+			<h2>Exported Code</h2>
+			<small>Copy this into a text document to save for your records.</small>
+			<br/>
+			<br/>
+			<textarea></textarea>
+			<button class="done">
+				Done
+			</button>
+		</div>
+
+		<script src="lib/jquery-1.7.2.min.js"></script>
+		<!--<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>-->
+		<script src="lib/jquery.ui.core.js"></script>
+		<script src="lib/jquery.ui.widget.js"></script>
+		<script src="lib/jquery.ui.position.js"></script>
+		<script src="lib/jquery.ui.autocomplete.js"></script>
+		<script src="lib/jquery.hotkeys.js"></script>
+		<script src="lib/jquery.querystring.js"></script>
+		<script src="lib/yepnope.1.0.2-min.js"></script>
+		<script src="lib/jquery.bpopup-0.5.1.min.js"></script>
+		<script src="lib/jquery.autoGrowInput.js"></script>
+		<script src="lib/json2.js"></script><!-- Make this conditional -->
+		<script src="lib/jquery.scrollTo.js"></script>
+		<script src="scripts/drag.js"></script>
+		<script src="scripts/blocks.js"></script>
+		<script src="scripts/runtime.js"></script>
+		<!-- Should this be moved to language? -->
+		<script src="scripts/workspace.js"></script>
+		<script src="scripts/search.js"></script>
+		<script type="text/javascript" src="lib/jquery-ui-1.8.21.custom.min.js"></script>
+		<script>
+            /*Runs the categories in the search field.*/
+            $.widget("custom.catcomplete", $.ui.autocomplete, {
+                _renderMenu : function(ul, items) {
+                    var self = this, currentCategory = "";
+                    $.each(items, function(index, item) {
+                        if (item.category != currentCategory) {
+                            ul.append("<li class='ui-autocomplete-category'>" + item.category + "</li>");
+                            currentCategory = item.category;
+                        }
+                        self._renderItem(ul, item);
+                    });
+                }
+            });
 		</script>
-	<script>
-        var q = $.parseQuery();
-        // Insert path of plugin to be loaded here
-        yepnope({
-			load: ["plugins/canvas.js"]
-			/*callback: function(){
-				alert("canvas loaded");
-			}*/
-        });
-        // This needs to run after the plugin is loaded.
-        function pluginReady(){
-            load_current_scripts();
-            if(q.demo){
-                $(document).ready(function(){
-                    restore_demo_by_name(q.demo);
+		<script>
+            var q = $.parseQuery();
+            // Insert path of plugin to be loaded here
+            yepnope({
+                load : ["plugins/canvas.js"]
+                /*callback: function(){
+                 alert("canvas loaded");
+                 }*/
+            });
+            // This needs to run after the plugin is loaded.
+            function pluginReady() {
+                load_current_scripts();
+                if (q.demo) {
+                    $(document).ready(function() {
+                        restore_demo_by_name(q.demo);
+                    });
+                }
+                $(function() {
+                    $("#accordion").accordion({
+                        collapsible : true,
+                        autoHeight : false,
+                        icons : {
+                            "header" : "ui-icon-circle-triangle-e",
+                            "headerSelected" : "ui-icon-circle-triangle-s"
+                        }
+                    });
+                    $("#radio").buttonset();
+                    $("button").button();
+                    $("#search").catcomplete({
+                        source : window.blocknames,
+                    });
                 });
             }
-			$(function(){
-				$("#accordion").accordion({
-					collapsible: true, 
-					autoHeight: false,
-					icons: {
-						"header": "ui-icon-circle-triangle-e",
-						"headerSelected": "ui-icon-circle-triangle-s"
-					}
-				});
-				$( "#radio" ).buttonset();
-				$("button").button();
-				$("#search").catcomplete({
-						source : window.blocknames,
-					});
-			});
-        }
-    </script>
-  </body>
+		</script>
+	</body>
 </html>
