changed layout to matthew james taylor to preserve IE compatibility

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             </blockquote>
             <p> The images used as examples were taken from wikimedia commons,
             and are in the public domain.</p>
+			<p> The main layout was created by 
+			<a href="http://matthewjamestaylor.com/">Matthew James Taylor</a></p>
 
 
             <!-- TODO: License here? -->
